fix: Main editor scrollbar bg fixed
Make scrollbar background transparent to look like in Discord app

--- a/.theme/base.css
+++ b/.theme/base.css
@@ -2,34 +2,6 @@
 THEME BASE
 ----------------------------------------------------------------*/
 
-:root {
-  --default-font: Catamaran, Helvetica Neue, Helvetica, Arial, sans-serif;
-  --font-editor: CatamaranSS, Helvetica Neue, Helvetica, Arial, sans-serif;
-  --font-monospace: Source Code Pro, iA Writer Mono S, Jetbrains Mono, Menlo, SFMono-Regular, Consolas, "Roboto Mono", Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Monaco, Courier New, Courier, monospace;
-
-  /* discord palette */
-  --discord-green: hsla(153, 46%, 49%, 1);
-  --discord-yellow: hsla(38, 96%, 54%, 1);
-  --discord-yellow-alt: hsla(37, 65%, 59%, 1);
-  --discord-yellow-light: hsla(50, 42%, 48%, 1);
-  --discord-yellow-bg: hsla(38, 96%, 54%, 0.1);
-  --discord-orange: hsla(20, 84%, 52%, 1);
-  --discord-red: hsla(0, 85%, 61%, 1);
-  --discord-blue: hsla(227, 58%, 65%, 1);
-  --discord-blue-hover: hsla(227, 44%, 59%, 1);
-  --discord-grey: hsla(214, 10%, 50%, 1);
-  --discord-grey-hover: hsla(214, 10%, 45%, 1);
-  --discord-dark: hsla(216, 7%, 14%, 1);
-  --discord-dark-hover: hsla(216, 7%, 14%, 0.7);
-
-  --elevation-stroke: 0 0 0 1px hsla(240, 11%, 2%, 0.15);
-  --elevation-low: 0 1px 0 hsla(240, 11%, 2%, 0.2), 0 1.5px 0 hsla(240, 8%, 3%, 0.05), 0 2px 0 hsla(240, 11%, 2%, 0.05);
-  --elevation-medium: 0 4px 4px hsla(0, 0%, 0%, 0.16);
-  --elevation-high: 0 8px 16px hsla(0, 0%, 0%, 0.24);
-
-  --readable-line-length: 45rem;
-}
-
 .theme-dark {
   --background-primary: hsla(220, 8%, 23%, 1);
   --background-primary-alt: hsla(232, 14%, 31%, 1);
@@ -95,6 +67,7 @@ THEME BASE
   --blockquote-border: hsla(286, 22%, 66%, 1);
   --blockquote-bg: hsla(240, 11%, 2%, 0.07);
 
+  --scrollbar-bg: transparent;
   --scrollbar-thin-thumb: hsla(216, 7%, 14%, 1);
   --scrollbar-thin-track: transparent;
   --scrollbar-auto-thumb: hsla(216, 7%, 14%, 1);
@@ -114,6 +87,33 @@ THEME BASE
   --graph-fill-tag: hsla(250, 100%, 77%, 1);
   --graph-fill-attachment: hsla(314, 57%, 63%, 1);
   --graph-arrow: hsla(314, 57%, 63%, 1);
+}
+
+:root {
+  --default-font: Catamaran, Helvetica Neue, Helvetica, Arial, sans-serif;
+  --font-editor: CatamaranSS, Helvetica Neue, Helvetica, Arial, sans-serif;
+  --font-monospace: Source Code Pro, iA Writer Mono S, Jetbrains Mono, Menlo, SFMono-Regular, Consolas, "Roboto Mono", Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Monaco, Courier New, Courier, monospace;
+  /* discord palette */
+  --discord-green: hsla(153, 46%, 49%, 1);
+  --discord-yellow: hsla(38, 96%, 54%, 1);
+  --discord-yellow-alt: hsla(37, 65%, 59%, 1);
+  --discord-yellow-light: hsla(50, 42%, 48%, 1);
+  --discord-yellow-bg: hsla(38, 96%, 54%, 0.1);
+  --discord-orange: hsla(20, 84%, 52%, 1);
+  --discord-red: hsla(0, 85%, 61%, 1);
+  --discord-blue: hsla(227, 58%, 65%, 1);
+  --discord-blue-hover: hsla(227, 44%, 59%, 1);
+  --discord-grey: hsla(214, 10%, 50%, 1);
+  --discord-grey-hover: hsla(214, 10%, 45%, 1);
+  --discord-dark: hsla(216, 7%, 14%, 1);
+  --discord-dark-hover: hsla(216, 7%, 14%, 0.7);
+
+  --elevation-stroke: 0 0 0 1px hsla(240, 11%, 2%, 0.15);
+  --elevation-low: 0 1px 0 hsla(240, 11%, 2%, 0.2), 0 1.5px 0 hsla(240, 8%, 3%, 0.05), 0 2px 0 hsla(240, 11%, 2%, 0.05);
+  --elevation-medium: 0 4px 4px hsla(0, 0%, 0%, 0.16);
+  --elevation-high: 0 8px 16px hsla(0, 0%, 0%, 0.24);
+
+  --readable-line-length: 45rem;
 }
 
 /* HACK for settings panel if title bar is brought back by user */
